<resources>
    <string name="app_name">MoneyTracker</string>
    <string name="transactions">Траты</string>
    <string name="summa">Сумма</string>
    <string name="notice">Примечание</string>
    <string name="category">Категория</string>
    <string name="data">Дата</string>
    <string name="name_transaction">название транзакции</string>
    <string name="add_transactions">Добавить трату</string>
    <string name="add_category">Добавить категорию</string>
    <string name="food">еда</string>
    <string name="categorys">Категории</string>
    <string name="statistics">Статистика</string>
</resources>
