<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <include layout="@layout/toolbar"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount = "4"
        android:background="@color/backgroung">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:gravity="fill"
            android:textColor="@color/colorText"
            android:layout_marginRight="20dp"
            android:text="@string/summa"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorText"
            android:layout_row="0"
            android:layout_column="1"
            android:inputType="number"
            android:ems="10"
            android:gravity="fill"
            android:id="@+id/et_summa"
            android:hint="300"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:gravity="fill"
            android:textColor="@color/colorText"
            android:layout_marginRight="20dp"
            android:text="@string/notice"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:textColorHint="@color/colorText"
            android:ems="10"
            android:gravity="fill"
            android:id="@+id/et_notice"
            android:hint="@string/name_transaction"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:gravity="fill"
            android:textColor="@color/colorText"
            android:layout_marginRight="20dp"
            android:text="@string/category"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:gravity="fill"
            android:textColor="@color/colorText"
            android:layout_marginRight="20dp"
            android:text="@string/data"/>
    </GridLayout>

</LinearLayout>